--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -5,8 +5,8 @@
     border:1px #DDDDDD solid;
     border-radius:4px;
     display:flex;
-    justify-content:flex-end;
     align-items:center;
+    justify-content:end;
 }
 .filters button{
     font-size:18px;
@@ -17,7 +17,31 @@
     border-radius:4px;
     border:0;
     margin-right:30px;
+    justify-content:flex-end;
 }
 .filters button:hover{
     opacity:0.9;
 }
+.locations{
+    border-right:1px #DDDDDD solid;
+}
+.locations, .amenities{
+    width:25%;
+    height:100%;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    margin-right:10%;
+}
+
+
+.locations h3, .amenities h3{
+    font-weight:600;
+}
+
+.locations h4, .amenities h4{
+    font-weight:400;
+    font-size:14px;
+}
+
+
