--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -4,5 +4,6 @@
     font-size:14px;
     font-family:Circular, "Helvetica Neue",Helvetica,Arial,san-serif;
     color:#484848;
+    overflow: hidden;
 }
 
